# Albert-Retail-Store-Stocking

./: README.md
retail_store_simulation/: README.md  retail_store_simulation.rosinstall
retail_store_simulation/albert_bringup/: CMakeLists.txt  package.xml
retail_store_simulation/albert_bringup/launch/: albert.launch  boxer.launch  panda.launch
retail_store_simulation/albert_control/: CMakeLists.txt  package.xml
retail_store_simulation/albert_control/config/: albert_controllers.yaml
retail_store_simulation/albert_control/launch/: boxer_control.launch  panda_control.launch  sim_control.launch
retail_store_simulation/albert_description/: CMakeLists.txt  README.md  package.xml
retail_store_simulation/albert_gazebo/: CMakeLists.txt  README.md  package.xml
retail_store_simulation/albert_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
retail_store_simulation/albert_navigation/: CMakeLists.txt  package.xml
retail_store_skills/: CMakeLists.txt  README.md  package.xml  retail_store_skills.rosinstall
retail_store_skills/action/: Place.action
retail_store_skills/config/: AH_store_tags.yaml
retail_store_skills/launch/: apriltag_detection.launch  load_skills.launch
retail_store_skills/scripts/: look_for_item_server_moveit.py  mock_vacuum_server.py  move_base.py  pick_client.py  pick_server_moveit.py  place_client.py  place_server_moveit.py  plan_arm_ik.py  task.py
rosplan/: README.md  retail_store_skills.repos
rosplan/retail_store_planning/: CMakeLists.txt  KB.pl  PROLOG.py  new_executor.bash  package.xml  rosplan_executor.bash
(+107 files in other folders)
